can make lists, tasks, associate them

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cee1ed', endColorstr='#85b2d3',GradientType=0 ); /* IE6-9 */
+	color:#000;
+	padding:20px;
 }
